header on mobile fix

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -139,7 +139,7 @@ header[role="banner"] {
 
 /*Header*/
 header[role="banner"] {
-	padding-top: 0;
+	padding-top: .5em;
 }
 
 header[role="banner"] h1 {
@@ -148,7 +148,6 @@ header[role="banner"] h1 {
 	color: rgba(94, 116, 125, .8);
 	position: relative;
 	margin-bottom: 0;
-	margin-top: -.5em;
 	padding-left: 60px;
 	background: transparent url('../img/glassfruit48.png') no-repeat left top;
 }
@@ -430,6 +429,10 @@ aside h1 {
 	aside .row,
 	header[role="banner"] {
 		padding: 2em 0;
+	}
+	
+	header[role="banner"] {
+		padding-top: .5em;
 	}
 	
 	aside .btn {
